--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,57 @@ p {
   max-width: 269px;
 }
 
+
+.interior-photo {
+  width: 370px;
+}
+
+.author-photo {
+  border-radius: 50%;
+  width: 63px;
+}
+
+.header-card {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  font-family: Montserrat;
+}
+
+.footer-card {
+  color: #FFF;
+  font-size: 18px;
+  font-family: Lora;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  max-width: 170px;
+}
+
+.job {
+  font-size: 10px;
+  color: var(--gray-3, #828282);
+}
+
+.author-name {
+  font-size: 12px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  color: #fff;
+  padding: 10px 30px;
+  min-width: 255px;
+  min-height: 138px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  position: absolute;
+  background: #181719;
+  top: 480px;
+  right: 26px;
+}
+
 .text-content {
   color: #fff;
   font-style: normal;
