--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,13 @@ header {
 }
 
 footer {
-  color: #A9A9A9;
+  color: #BDBDBD;
   text-align: center;
   font-size: 14px;
   font-family: Montserrat;
-  font-style: normal;
   font-weight: 500;
-  line-height: normal;
+  margin-top: 30px;
+  margin-bottom: 15px;
 }
 
 h1 {
@@ -36,6 +36,7 @@ p {
   font-family: Montserrat;
   font-weight: 400;
   max-width: 269px;
+  margin-top: 25px;
 }
 
 
@@ -85,11 +86,12 @@ p {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   position: absolute;
   background: #181719;
-  top: 480px;
+  top: 540px;
   right: 26px;
 }
 
 .text-content {
+  margin-top: 40px;
   color: #fff;
   font-style: normal;
   line-height: normal;
@@ -105,6 +107,19 @@ p {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 30px;
+  gap: 15px;
   font-weight: 700;
+  margin-top: 25px;
+}
+
+.mid-content {
+  margin-top: 25px;
+}
+
+.material-icons.md-36 {
+  font-size: 36px; 
+}
+
+.material-icons.md-24 {
+  font-size: 24px; 
 }
