--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,6 @@ p {
   margin-top: 25px;
 }
 
-
 .interior-photo {
   width: 370px;
 }
@@ -127,4 +126,14 @@ p {
 
 .material-icons.md-24 {
   font-size: 24px; 
+}
+
+@media only screen and (min-width: 768px) {
+  .wrap {
+    text-align: -webkit-center;
+  }
+  
+  .content {
+    max-width: 1200px;
+  }
 }
